--- a/text/01_Limit_Definition.tex
+++ b/text/01_Limit_Definition.tex
@@ -1,5 +1,5 @@
 
-\section{Epsilon-Delta Definition of a Limit}\label{sec:limit_def}
+\section{Epsilon-Delta Definition of a Limit (Optional)}\label{sec:limit_def}
 
 This section introduces the formal definition of a limit. Many refer to this as ``the epsilon--delta,'' definition, referring to the letters $\epsilon$ and $\delta$ of the Greek alphabet.\\
 
