--- a/text/04_NewtonsMethod.tex
+++ b/text/04_NewtonsMethod.tex
@@ -1,7 +1,7 @@
 In Chapter \ref{chapter:graphbehavior}, we learned how the first and second derivatives of a function influence its graph. In this chapter we explore other applications of the derivative.
 
 
-\section{Newton's Method}\label{sec:newton}
+\section{Newton's Method (Optional)}\label{sec:newton}
 Solving equations is one of the most important things we do in mathematics, yet we are surprisingly limited in what we can solve analytically.  For instance, equations as simple as $x^5+x+1=0$ or $\cos x =x $ cannot be solved by algebraic methods in terms of familiar functions.  Fortunately, there are methods that can give us \textit{approximate} solutions to equations like these.  These methods can usually give an approximation correct to as many decimal places as we like. In Section \ref{sec:continuity} we learned about the Bisection Method.  This section focuses on another technique (which generally works faster), called Newton's Method.
 
 %\vspace{.1in}\textbf{Newton's Method}\vspace{.1in}
