Changed wrapper files to reflect splitting of infinite limits sections
Changed wrapper files to reflect splitting of infinite limits sections

--- a/Calculus.tex
+++ b/Calculus.tex
@@ -76,7 +76,8 @@
 \input{text/01_Analytic_Limits}
 \input{text/01_One_Sided_Limits}
 \input{text/01_Continuity}
-\input{text/01_Limits_Involving_Infinity}
+\input{text/01_Infinite_Limits}
+\input{text/01_Limits_At_Infinity}
 
 
 %%\addtocounter{chapter}{1}
@@ -200,9 +201,7 @@
 \input{text/10_Lines}
 \input{text/10_Planes}
 
-\addtocontents{toc}{\protect\thispagestyle{empty}}
-
-%%%\addtocounter{chapter}{10}
+\addtocontents{toc}{\protect\thispagestyle{empty}}%%%\addtocounter{chapter}{10}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \chapter{Vector Valued Functions}\label{chap:vvf}
 \thispagestyle{empty}
