--- a/CalculusI.tex
+++ b/CalculusI.tex
@@ -74,7 +74,8 @@
 \input{text/01_Analytic_Limits}
 \input{text/01_One_Sided_Limits}
 \input{text/01_Continuity}
-\input{text/01_Limits_Involving_Infinity}
+\input{text/01_Infinite_Limits}
+\input{text/01_Limits_At_Infinity}
 
 
 %%%\addtocounter{chapter}{1}
