deleted mbx files, changed CalculusI.tex
Deleted mbx files, changed Calculus1.tex to include reflect changes made
to Calculus.tex

--- a/Calculus.tex
+++ b/Calculus.tex
@@ -129,7 +129,7 @@
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 
 \input{text/05_Antiderivatives}
-\addtocontents{toc}{\protect\thispagestyle{empty}}
+%\addtocontents{toc}{\protect\thispagestyle{empty}} duplicate line?
 \input{text/05_Definite_Integral}
 \input{text/05_Riemann_Sums}
 \input{text/05_FTC}
