--- a/CalculusI.tex
+++ b/CalculusI.tex
@@ -61,7 +61,7 @@
 %\printexercisenames
 \printincolor
 %\printinblackandwhite
-%\printallanswers
+\printallanswers
 
 
 \input{text/front_matter_and_coverI}
@@ -106,14 +106,16 @@
 
 %%%\addtocounter{chapter}{3}
 
-%\clearpage{\pagestyle{empty}\cleardoublepage}
-%\chapter{Applications of the Derivative}\label{chapter:deriv_apps}
-%\thispagestyle{empty}
-%
-%\input{text/04_NewtonsMethod}
-%\input{text/04_Related_Rates}
-%\input{text/04_Optimization}
-%\input{text/04_Differentials}
+\clearpage{\pagestyle{empty}\cleardoublepage}
+\chapter{Applications of the Derivative}\label{chapter:deriv_apps}
+\thispagestyle{empty}
+
+\input{text/04_Related_Rates}
+\input{text/06_LHopitals_Rule}
+\input{text/04_Optimization}
+\input{text/04_Differentials}
+\input{text/04_NewtonsMethod}
+
 %%
 %%
 %%
@@ -134,9 +136,17 @@
 %%%%
 %%%%%\addtocounter{chapter}{4}
 %%
-%\clearpage{\pagestyle{empty}\cleardoublepage}
-%\chapter{Integration}\label{chapter:integration}
-%\thispagestyle{empty}
+\clearpage{\pagestyle{empty}\cleardoublepage}
+\chapter{Integration}\label{chapter:integration}
+\thispagestyle{empty}
+
+\input{text/05_Antiderivatives}
+\input{text/05_Definite_Integral}
+\input{text/05_Riemann_Sums}
+\input{text/05_FTC}
+\input{text/06_Substitution}
+\input{text/05_Numerical_Integration}
+
 %\addtocontents{toc}{\protect\thispagestyle{empty}}
 %
 %\input{text/05_Antiderivatives}
@@ -328,8 +338,8 @@
 \phantomsection
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\indexname}
-%\printindex
-%\includepdf[pages={863-868}]{Calculus.pdf}
+\printindex
+\includepdf[pages={897-902}]{Calculus.pdf}
 
 \input{text/Inside_Cover_Of_The_Text_Material_Complete}
 
