--- a/CalculusII.tex
+++ b/CalculusII.tex
@@ -67,7 +67,7 @@
 \usetwoDgraphics
 
 %\printexercisenames
-%\printallanswers
+\printallanswers
 
 \input{text/front_matter_and_coverII}
 
@@ -137,17 +137,17 @@
 \setcounter{page}{189}
 \thispagestyle{empty}
 
-\chapter{Integration}\label{chapter:integration}
-\addtocontents{toc}{\protect\enlargethispage{2\baselineskip}}
-\thispagestyle{empty}
+%\chapter{Integration}\label{chapter:integration}
+%\addtocontents{toc}{\protect\enlargethispage{2\baselineskip}}
+%\thispagestyle{empty}
 %\setcounterpageref{page}{lastdefcount1}
 %\addtocounter{page}{4}
-\input{text/05_Antiderivatives}
-\addtocontents{toc}{\protect\thispagestyle{empty}}
-\input{text/05_Definite_Integral}
-\input{text/05_Riemann_Sums}
-\input{text/05_FTC}
-\input{text/05_Numerical_Integration}
+%\input{text/05_Antiderivatives}
+%\addtocontents{toc}{\protect\thispagestyle{empty}}
+%\input{text/05_Definite_Integral}
+%\input{text/05_Riemann_Sums}
+%\input{text/05_FTC}
+%\input{text/05_Numerical_Integration}
 
 
 %%\addtocounter{chapter}{5}
@@ -193,20 +193,25 @@
 \input{text/08_Taylor_Series}
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 
+
+
+%%
+%%%\addtocounter{chapter}{8}
+\clearpage{\pagestyle{empty}\cleardoublepage}
+\chapter{Curves in the Plane}
+\thispagestyle{empty}
+
+\input{text/09_Conic_Sections}
+\input{text/09_Parametric_Equations}
+\input{text/09_Parametric_Calculus}
+\input{text/09_Polar_Intro}
+\input{text/09_Polar_Calculus}
+
 %%%
 %%%    Begins Calc III
 %
 
-%%
-%%%\addtocounter{chapter}{8}
-%\clearpage{\pagestyle{empty}\cleardoublepage}
-%\chapter{Curves in the Plane}
-%\thispagestyle{empty}
-%\input{text/09_Conic_Sections}
-%\input{text/09_Parametric_Equations}
-%\input{text/09_Parametric_Calculus}
-%\input{text/09_Polar_Intro}
-%\input{text/09_Polar_Calculus}
+
 %
 %
 %%%\addtocounter{chapter}{9}
