--- a/CalculusIII.tex
+++ b/CalculusIII.tex
@@ -212,18 +212,18 @@
 %%\addtocounter{page}{2}
 
 \addtocounter{chapter}{8}
-\clearpage{\pagestyle{empty}\cleardoublepage}
-\chapter{Curves in the Plane}
-\thispagestyle{empty}
+%\clearpage{\pagestyle{empty}\cleardoublepage}
+%\chapter{Curves in the Plane}
+%\thispagestyle{empty}
 
 %\setcounterpageref{page}{lastdefcount2}
 
 %%%%def:\ref{lastdefcount2} thm:\ref{lastthmcount2} idea:\pageref{lastideacount2}
-\input{text/09_Conic_Sections}
-\input{text/09_Parametric_Equations}
-\input{text/09_Parametric_Calculus}
-\input{text/09_Polar_Intro}
-\input{text/09_Polar_Calculus}
+%\input{text/09_Conic_Sections}
+%\input{text/09_Parametric_Equations}
+%\input{text/09_Parametric_Calculus}
+%\input{text/09_Polar_Intro}
+%\input{text/09_Polar_Calculus}
 
 
 %%\addtocounter{chapter}{9}
