changed title of section
shortened title to just 'triple integration'

--- a/text/13_Triple_Integration.tex
+++ b/text/13_Triple_Integration.tex
@@ -1,4 +1,4 @@
-\section{Volume Between Surfaces and Triple Integration}\label{sec:triple_int}
+\section{Triple Integration}\label{sec:triple_int}
 
 We learned in Section \ref{sec:double_int_volume} how to compute the signed volume $V$ under a surface $z=f(x,y)$ over a region $R$: $V = \iint_R f(x,y)\ dA$. It follows naturally that if $f(x,y)\geq g(x,y)$ on $R$, then the \textbf{volume between $f(x,y)$ and $g(x,y)$ on $R$} is 
 $$V = \iint_R f(x,y)\ dA - \iint_R g(x,y)\ dA = \iint_R \big(f(x,y)-g(x,y)\big)\ dA.$$
